I added chart from Chart.JS library.

--- a/style.css
+++ b/style.css
@@ -200,17 +200,8 @@ html {
   height: 100vh;
 }
 
-.graph-item {
-  width: 4rem;
-  border: .1rem solid white;
-  background-color: var(--web-color);
-  color: white;
-  font-weight: bold;
-  display: flex;
-  justify-content: center;
-  align-items: end;
-  padding: 0 .5rem;
-  font-size: 1.5rem;
+.graph-ctnr-2{
+  height: 50rem;
 }
 
 /* dashbord end */
