I added some code.

--- a/style.css
+++ b/style.css
@@ -353,3 +353,33 @@ th {
   font-size: var(--web-fS-md);
   font-weight: 600;
 }
+
+.added-data-ctnr-inner{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: .1rem solid var(--web-main-color-dark);
+  border-top: .1rem solid var(--web-main-color-dark);
+}
+
+.added-data-ctnr-inner :nth-child(2){
+  display: flex;
+  justify-content: space-between;
+  align-items:center;
+  gap: 10rem;
+}
+
+.added-data-ctnr-inner :nth-child(3){
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 1rem;
+}
+
+.added-data-ctnr-inner :nth-child(3) button{
+  border: none;
+  background-color: var(--web-main-color-light);
+  color: var(--web-main-color-dark);
+  font-size: var(--web-fS-md);
+  font-weight: 600;
+}
