--- a/style.css
+++ b/style.css
@@ -346,41 +346,41 @@ th {
   text-transform: capitalize;
   font-size: var(--web-fS-md);
   color: var(--web-main-color-dark) !important;
+  text-align: center !important;
 }
 
 .added-data {
   color: var(--web-main-color-dark);
   font-size: var(--web-fS-md);
   font-weight: 600;
+  /* border-right: 0.1rem solid var(--web-main-color-dark);
+  padding: 0 1rem; */
 }
 
 .added-data-ctnr-inner {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
   border-bottom: 0.1rem solid var(--web-main-color-dark);
   border-top: 0.1rem solid var(--web-main-color-dark);
   margin: 1rem 0;
 }
 
-.added-data-ctnr-inner :nth-child(2) {
-  display: flex;
-  justify-content: space-between;
-  align-items: baseline;
-  gap: 10rem;
-}
-
-.added-data-ctnr-inner :nth-child(3) {
+.added-data-ctnr-inner :nth-child(1) {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  gap: 1rem;
 }
 
-.added-data-ctnr-inner :nth-child(3) button {
+.added-data-ctnr-inner :nth-child(2) {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.added-data-ctnr-inner :nth-child(2) button {
   border: none;
   background-color: var(--web-main-color-light);
   color: var(--web-main-color-dark);
-  font-size: var(--web-fS-md);
+  font-size: var(--web-fS-sm);
   font-weight: 600;
+  border-radius: 0.5rem;
+  height: 100%;
 }
